v0.5.x/_sources/auto_tutorials/index.rst.txt
:orphan:



.. _sphx_glr_auto_tutorials:

Tutorials
=========

How to use widgets, ui, actor and windows module. Below some tutorials to go in details

.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_01_introductory:

Introductory
------------

These tutorials show:

- How to combine a timer with an actor
- How to slice data with the slicer actor
- How to use the normals of your data.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a simple animation using a timer callback.">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_timers_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_timers.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_timers

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Spiky Sphere">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_spiky_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_spiky.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_spiky

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here is a simple tutorial that shows how to visualize surfaces using DIPY. It also shows how to...">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_surfaces_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_surfaces.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_surfaces

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we present an example for visualizing slices from 3D images.">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_slice_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_slice.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_slice
.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_02_ui:

Basic User Interface Elements
-----------------------------

These tutorials show how to create basic user interfaces elements.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to draw some geometric shapes...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_shapes_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_shapes.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_shapes

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will create a list some geometric shapes from DIPY...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_ui_listbox_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_ui_listbox.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_ui_listbox

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to create panel having button...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_buttons_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_buttons.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_buttons

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to create a cube and control ...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_ui_slider_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_ui_slider.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_ui_slider
.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_03_advanced_ui:

Building User Interfaces
------------------------

These tutorials show:

- How to combine user interface elements.
- How to create new user interface elements.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to create several DIPY UI ele...">

.. only:: html

 .. figure:: /auto_tutorials/03_advanced_ui/images/thumb/sphx_glr_viz_ui_thumb.png

     :ref:`sphx_glr_auto_tutorials_03_advanced_ui_viz_ui.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/03_advanced_ui/viz_ui
.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_04_shaders:

Shaders
-------

These tutorials show:

- How to use shaders in FURY actors.
- How to create new user shaders and internal conventions.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use shaders to generate a shaded output. We will demonstrate how to l...">

.. only:: html

 .. figure:: /auto_tutorials/04_shaders/images/thumb/sphx_glr_viz_shader_thumb.png

     :ref:`sphx_glr_auto_tutorials_04_shaders_viz_shader.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/04_shaders/viz_shader
.. raw:: html

    <div style='clear:both'></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: auto_tutorials_python.zip <//Users/koudoro/Software/fury/docs/source/auto_tutorials/auto_tutorials_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: auto_tutorials_jupyter.zip <//Users/koudoro/Software/fury/docs/source/auto_tutorials/auto_tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
