v0.6.x/_sources/auto_tutorials/index.rst.txt
:orphan:



.. _sphx_glr_auto_tutorials:

Tutorials
=========

How to use widgets, ui, actor and windows module. Below some tutorials to go in details

.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_01_introductory:

Introductory
------------

These tutorials show:

- How to combine a timer with an actor
- How to slice data with the slicer actor
- How to use the normals of your data.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere Texture">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_texture_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_texture.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_texture

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a simple animation using a timer callback.">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_timers_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_timers.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_timers

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Spiky Sphere">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_spiky_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_spiky.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_spiky

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here is a simple tutorial that shows how to visualize surfaces using DIPY. It also shows how to...">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_surfaces_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_surfaces.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_surfaces

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we present a tutorial showing how to interact with objects in the 3D world. All objects to...">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_picking_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_picking.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_picking

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Texture Sphere Animation">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_earth_animation_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_earth_animation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_earth_animation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we will show how to place actors on specific locations on the surface of the ...">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_earth_coordinates_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_earth_coordinates.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_earth_coordinates

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we present an example for visualizing slices from 3D images.">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_slice_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_slice.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_slice

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we will create an animation of the solar system using textured spheres. We wi...">

.. only:: html

 .. figure:: /auto_tutorials/01_introductory/images/thumb/sphx_glr_viz_solar_system_thumb.png

     :ref:`sphx_glr_auto_tutorials_01_introductory_viz_solar_system.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/01_introductory/viz_solar_system
.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_02_ui:

Basic User Interface Elements
-----------------------------

These tutorials show how to create basic user interfaces elements.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to draw some geometric shapes...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_shapes_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_shapes.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_shapes

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the Combobox UI. We will demonstrate how to create ComboBoxes for...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_combobox_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_combobox.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_combobox

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will create a list some geometric shapes from DIPY...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_ui_listbox_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_ui_listbox.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_ui_listbox

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to create a Sphere and contro...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_radio_buttons_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_radio_buttons.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_radio_buttons

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to create panel having button...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_buttons_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_buttons.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_buttons

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the CheckBox UI API. We will demonstrate how to create a cube, sp...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_check_boxes_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_check_boxes.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_check_boxes

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to create a cube and control ...">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_ui_slider_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_ui_slider.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_ui_slider

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the Tab UI. We will demonstrate how to create Tabs for:">

.. only:: html

 .. figure:: /auto_tutorials/02_ui/images/thumb/sphx_glr_viz_tab_thumb.png

     :ref:`sphx_glr_auto_tutorials_02_ui_viz_tab.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/02_ui/viz_tab
.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_03_advanced_ui:

Building User Interfaces
------------------------

These tutorials show:

- How to combine user interface elements.
- How to create new user interface elements.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the UI API. We will demonstrate how to create several DIPY UI ele...">

.. only:: html

 .. figure:: /auto_tutorials/03_advanced_ui/images/thumb/sphx_glr_viz_ui_thumb.png

     :ref:`sphx_glr_auto_tutorials_03_advanced_ui_viz_ui.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/03_advanced_ui/viz_ui
.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_04_shaders:

Shaders
-------

These tutorials show:

- How to use shaders in FURY actors.
- How to create new user shaders and internal conventions.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SDFs or Signed-distance functions when passed the coordinates of a point in space, return the s...">

.. only:: html

 .. figure:: /auto_tutorials/04_shaders/images/thumb/sphx_glr_viz_sdfactor_thumb.png

     :ref:`sphx_glr_auto_tutorials_04_shaders_viz_sdfactor.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/04_shaders/viz_sdfactor

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use shaders to generate a shaded output. We will demonstrate how to l...">

.. only:: html

 .. figure:: /auto_tutorials/04_shaders/images/thumb/sphx_glr_viz_shader_thumb.png

     :ref:`sphx_glr_auto_tutorials_04_shaders_viz_shader.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/04_shaders/viz_shader
.. raw:: html

    <div style='clear:both'></div>



.. _sphx_glr_auto_tutorials_05_physics:

Physics
-------

These tutorials show how to use connect FURY with a physics engine library.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example simulation shows how to use pybullet to render physics simulations in fury. In thi...">

.. only:: html

 .. figure:: /auto_tutorials/05_physics/images/thumb/sphx_glr_viz_ball_collide_thumb.png

     :ref:`sphx_glr_auto_tutorials_05_physics_viz_ball_collide.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/05_physics/viz_ball_collide

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example simulation shows how to use pybullet to render physics simulations in fury. In thi...">

.. only:: html

 .. figure:: /auto_tutorials/05_physics/images/thumb/sphx_glr_viz_brick_wall_thumb.png

     :ref:`sphx_glr_auto_tutorials_05_physics_viz_brick_wall.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/05_physics/viz_brick_wall

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example simulation shows how to use pybullet to render physics simulations in fury. In thi...">

.. only:: html

 .. figure:: /auto_tutorials/05_physics/images/thumb/sphx_glr_viz_chain_thumb.png

     :ref:`sphx_glr_auto_tutorials_05_physics_viz_chain.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/05_physics/viz_chain

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example simulation shows how to use pybullet to render physics simulations in fury. In thi...">

.. only:: html

 .. figure:: /auto_tutorials/05_physics/images/thumb/sphx_glr_viz_wrecking_ball_thumb.png

     :ref:`sphx_glr_auto_tutorials_05_physics_viz_wrecking_ball.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/05_physics/viz_wrecking_ball
.. raw:: html

    <div style='clear:both'></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: auto_tutorials_python.zip <//Users/koudoro/Software/fury/docs/source/auto_tutorials/auto_tutorials_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: auto_tutorials_jupyter.zip <//Users/koudoro/Software/fury/docs/source/auto_tutorials/auto_tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
